2010-08-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-start-file-process ): Set connection
	property "vec".
	(tramp-process-sentinel): Use it for flushing the cache.  We
	cannot do it via the process buffer, the buffer could be deleted
	already when running the sentinel.

2010-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-dired-uncache): Flush directory cache,
	not only file cache.
	(tramp-process-sentinel): New defun.
	(tramp-handle-start-file-process): Use it, in order to invalidate
	file caches.

2010-07-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-start-file-process): Check only for
	`remote-tty' process property.
	(tramp-open-shell): Don't check for tty.
	(tramp-open-connection-setup-interactive-shell): Set `remote-tty'
	process property.

2010-07-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Move hostname to the end in all ssh
	`tramp-login-args'.
	(tramp-verbose): Describe verbose level 9.
	(tramp-open-shell): Check for tty if `tramp-verbose' >= 9.
	(tramp-open-connection-setup-interactive-shell): Trace stty
	settings if `tramp-verbose' >= 9.
	(tramp-handle-start-file-process): Implement tty setting.
	(Bug#4604, Bug#6360)

	* tramp-cmds.el (tramp-bug): Recommend setting of `tramp-verbose'
	to 9.

2010-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Move hostname to the end in all plink
	`tramp-login-args'.
	(tramp-file-name-regexp-unified)
	(tramp-completion-file-name-regexp-unified): On W32 systems, do
	not regard the volume letter as remote filename.  (Bug#5447)
	(tramp-open-shell): New defun.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Use it.

2010-07-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-ls-command)
	(tramp-get-ls-command-with-dired): Run tests on "/dev/null"
	instead of "/".

2010-07-20  Michael Albinus  <michael.albinus@gmx.de>
